# vrptw-solver

./: CMakeLists.txt  README.md  benchmark.py  benchmark_all_c.csv  main.py  pricing_cpp.cpp  pyproject.toml  requirements.txt  run_bnb.py  setup.py  test_binding.py  tip.md  vrptw.py
cpp_src/: bind.cpp  bindings.cpp  dominance.cpp  dominance.h  label.h  pricing_engine.cpp  pricing_engine.h
data/: solomon_bks.json
data/data_vrp/: C101.vrp  C102.vrp  C104.vrp  C106.vrp  C201.vrp  C202.vrp  C203.vrp  C204.vrp  C205.vrp  C207.vrp  C208.vrp  R104.vrp  R107.vrp  R108.vrp  R110.vrp  R202.vrp  R204.vrp  R207.vrp  R208.vrp  R211.vrp  RC105.vrp  RC106.vrp  RC107.vrp  RC108.vrp  RC201.vrp  RC202.vrp  RC204.vrp  RC205.vrp
data_vrp/: C103.vrp  C105.vrp  C107.vrp  C108.vrp  C109.vrp  C206.vrp  R101.vrp  R102.vrp  R103.vrp  R105.vrp  R106.vrp  R109.vrp  R111.vrp  R112.vrp  R201.vrp  R203.vrp  R205.vrp  R206.vrp  R209.vrp  R210.vrp  RC101.vrp  RC102.vrp  RC103.vrp  RC104.vrp  RC203.vrp  RC206.vrp  RC207.vrp  RC208.vrp
pricing_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyvrp/: Model.py  Result.py  _ProblemData.py  constants.py  exceptions.py  read.py
pyvrp/plotting/: __init__.py  plot_utils.py
pyvrp/search/: acceptance.py  destroy_operators.py  repair_operators.py  weights.py
pyvrp/stop/: stop.py
pyvrp/utils/: Statistics.py
result/benchmark_bnb/: bnb_results_20260121_201908.csv  bnb_results_20260121_202316.csv
result/benchmark_csv/: benchmark_20260119_123004.csv  benchmark_20260119_123331.csv  benchmark_20260119_125648.csv  benchmark_20260119_135536.csv  benchmark_20260120_191717.csv  benchmark_20260121_180709.csv
src/: branching.py  instance.py  master.py  pricing.py  pricing_pre.py  solver.py  visualizer.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
tests/: attention.txt  benchmark.py  main.py  test_core.py  test_forbidden_mechanism.py  test_model.py  test_operators.py  test_pricing.py  test_read.py  test_solution.py
